Crash on opening camera from Webview in iOS 18.4 rdar://148431362 https://bugs.webkit.org/show_bug.cgi?id=289459

Reviewed by Jean-Yves Avenard.

We create the timer only when needed.
This ensures that the timer will only be created in GPUProcess and not UIProcess where it may hit a release assert in case WebKit1 is used as well.

* Source/WebCore/platform/mediastream/mac/BaseAudioSharedUnit.cpp:
(WebCore::BaseAudioSharedUnit::BaseAudioSharedUnit):
(WebCore::BaseAudioSharedUnit::voiceActivityDetected):
(WebCore::BaseAudioSharedUnit::disableVoiceActivityThrottleTimerForTesting):
* Source/WebCore/platform/mediastream/mac/BaseAudioSharedUnit.h:
(WebCore::BaseAudioSharedUnit::disableVoiceActivityThrottleTimerForTesting): Deleted.

Canonical link: https://commits.webkit.org/294012@main